# android-ndk

teapots/choreographer-30fps/src/main/cpp/: CMakeLists.txt
teapots/classic-teapot/src/main/cpp/: CMakeLists.txt
teapots/common/ndk_helper/: CMakeLists.txt
teapots/more-teapots/src/main/cpp/: CMakeLists.txt
